# duckpipe

./: .gitignore  TODO.md  checklist.md  pyproject.toml
data/: sample_point_korea.csv  temp.py
duckpipe/: __init__.py  common.py  core.py  duckdb_utils.py  mixin.py
duckpipe/calculator/: AirportDistanceCalculator.py  BusStopDistanceCalculator.py  Clustering.py  CoastlineDistanceCalculator.py  CoordinateCalculator.py  HouseYearCalculator.py  LanduseCalculator.py  MDLDistanceCalculator.py  MainRoadDistanceCalculator.py  MainRoadLLWCalculator.py  PortDistanceCalculator.py  RailstationDistanceCalculator.py  RelativeElevationCalculator.py  RiverDistanceCalculator.py  RoadDistanceCalculator.py  RoadLLWCalculator.py  Worker.py  _IntersectingOACalculator.py  __init__.py
test/: example.py
