[project]
name = "duckpipe"
version = "0.1.0"
description = "."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # data processing
    "duckdb>=1.3.0",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "scipy>=1.14.1",
    
    # geospatial
    "geopandas>=1.0.1",
    
    # io
    "pyarrow",
    
    # testing
    "pytest", 
    
    # utility
    "python-dotenv",
    "tqdm",
    "typeguard", 
]